- `stonesense`: added back minecart track graphics.

## Fixes
- `stonesense`: fixed announcement text rendering off-screen with larger font sizes
- `stonesense`: screen dimensions are now properly set when overriden by a window manager
- `stonesense`: fixed glass cabinets and bookcases being misaligned by 1 pixel
- `stonesense`: fixed debug performance timers to show milliseconds as intended

## Misc Improvements
- `stonesense`: improved the way altars look

## Removed

# 51.02-r1

## Misc Improvements
- `stonesense`: ``keybinds.txt`` config file is now read from ``dfhack-config/stonesense/keybinds.txt``
- `stonesense`: added some missing artwork for bookcases, displays, and offering places
- `stonesense`: reorganized the position of some existing art to be more intuitive
- `stonesense`: added index numbers empty sprite slots to aid in making the xml files for the sprites
- `stonesense`: zoom levels in stonesense now mirror the main game when in follow mode
- `stonesense`: added new connective tiles for pools of blood and vomit

# 50.15-r2

## New Features
- `stonesense`: added hotkey to toggle fog ``;`` (default keybinding)
- `stonesense`: added hotkey to toggle announcements: ``a`` (default keybinding)
- `stonesense`: added hotkey to toggle debug mode: ``~`` (default keybinding)
- `stonesense`: added init file config to show announcements (on by default)
- `stonesense`: added init file config for whether Esc is recognized for closing the stonesense window (on by default to match previous behavior)
- `stonesense`: added init file config for whether creature moods and jobs are displayed (off by default)

## Fixes
- `stonesense`: fixed crash when maximizing or resizing the window
- `stonesense`: fixed crash when turning the onscreen display (OSD) layer off

## Misc Improvements
- `stonesense`: changed announcements to be right-aligned and limited to only show the most recent 10 announcements