@@ -47,6 +47,7 @@ Template for new versions:
 - `stonesense`: screen dimensions are now properly set when overriden by a window manager
 - `stonesense`: fixed glass cabinets and bookcases being misaligned by 1 pixel
 - `stonesense`: fixed debug performance timers to show milliseconds as intended
+- `stonesense`: stonesense no longer becomes unresponsive following a megashot
 
 ## Misc Improvements
 - `stonesense`: improved the way altars look
